<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Please tap on the map to choose a place"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions"
        tools:layout_editor_absoluteX="13dp" />

    <EditText
        android:id="@+id/et_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_longitude"
        android:digits="0123456789-."
        android:inputType="numberSigned"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@+id/et_latitude"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/et_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_latitude"
        android:digits="0123456789-."
        android:inputType="numberSigned"
        android:paddingHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@+id/et_address"
        tools:layout_editor_absoluteX="0dp" />

    <CheckBox
        android:id="@+id/cb_visited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Visited"
        app:layout_constraintTop_toBottomOf="@+id/et_longitude"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="409dp"
        android:layout_height="461dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_visited"
        tools:context=".AddorUpdateFavoritePlaceActivity" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_save"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="0.611" />


</androidx.constraintlayout.widget.ConstraintLayout>